Footer and buttons

--- a/contact/templates/contact/includes/social.html
+++ b/contact/templates/contact/includes/social.html
@@ -1,18 +1,6 @@
 {% if settings.pages.SocialMediaSettings.facebook %}
-	<a href="{{ settings.pages.SocialMediaSettings.facebook }}" target="_blank" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
+	<a href="{{ settings.pages.SocialMediaSettings.facebook }}" target="_blank"><i class="fab fa-2x fa-facebook" aria-label="Facebook" aria-hidden="true"></i></a>
 {% endif %}
 {% if settings.pages.SocialMediaSettings.twitter %}
-	<a href="{{ settings.pages.SocialMediaSettings.twitter }}" target="_blank" class="social-icon-button twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a>
-{% endif %}
-{% if settings.pages.SocialMediaSettings.instagram %}
-	<a href="{{ settings.pages.SocialMediaSettings.instagram }}" target="_blank" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
-{% endif %}
-{% if settings.pages.SocialMediaSettings.linkedin %}
-	<a href="{{ settings.pages.SocialMediaSettings.linkedin }}" target="_blank" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
-{% endif %}
-{% if settings.pages.SocialMediaSettings.github %}
-	<a href="{{ settings.pages.SocialMediaSettings.github }}" target="_blank" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
-{% endif %}
-{% if settings.pages.SocialMediaSettings.youtube %}
-<a href="{{ settings.pages.SocialMediaSettings.youtube }}" target="_blank" class="social-icon-button facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a>
+	<a href="{{ settings.pages.SocialMediaSettings.twitter }}" target="_blank"><i class="fab fa-2x fa-twitter" aria-label="Twitter" aria-hidden="true"></i></a>
 {% endif %}
