--- a/pages/templates/pages/home_page.html
+++ b/pages/templates/pages/home_page.html
@@ -20,7 +20,7 @@
 									<h3>{{ block.title}}</h3>
 									<hr />
 									{{ block.content|richtext }}
-									<a href="{{ block.link }}" class="button secondary" target="_blank"><strong>Learn More</strong></a>
+									<a href="{{ block.link }}" class="button blue" target="_blank">Learn More</a>
 								</div>
 							</div>
 					</li>
