--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -6,8 +6,8 @@
 <div data-sticky data-options="marginTop:0;" style="width:100%;z-index:10000;">
 
     <div class="title-bar" data-responsive-toggle="menu" data-hide-for="large">
-        <button class="menu-icon" type="button" style="background: transparent;"data-toggle></button>
         <div class="title-bar-title"><a href="{% pageurl site_root %}">Grand Rapids Historical Society</a></div>
+        <button class="button blue menu-button" data-toggle>Menu</button>
     </div>
 
     <div class="top-bar" id="menu">
