--- a/pages/templates/pages/standard_page.html
+++ b/pages/templates/pages/standard_page.html
@@ -16,7 +16,7 @@
 
   <div id="content" class="grid-container">
     <div class="grid-x grid-padding-x">
-        <div id="standard_page" class="medium-9 cell">
+        <div id="standard_page" class="{% if self.sidebar_text %}medium-9{% else %}medium-12{% endif %} cell">
           {% include "pages/includes/intro.html" with intro=self.intro only %}
 
           {% include "pages/includes/orbit_carousel.html" with image_items=self.image_items.all only %}
