--- a/pages/templates/pages/standard_page_full.html
+++ b/pages/templates/pages/standard_page_full.html
@@ -16,11 +16,25 @@
 
   <div id="content" class="grid-container">
     <div class="grid-x grid-padding-x">
-      <div id="standard_page" class="medium-12 cell">
-         {% include "pages/includes/orbit_carousel.html" with image_items=self.image_items.all only %}
+        <div id="standard_page" class="{% if self.sidebar_text %}medium-9{% else %}medium-12{% endif %} cell">
+          {% include "pages/includes/intro.html" with intro=self.intro only %}
+
+          {% include "pages/includes/orbit_carousel.html" with image_items=self.image_items.all only %}
 
           {% include "pages/includes/body.html" with body=self.body only %}
         </div>
-    </div>
+        {% if self.sidebar_text %}
+        <div id="sidebar" class="hide-for-print hide-for-small-only medium-3 cell">
+          <div class="card">
+
+            <div class="card-section" style="padding: 12px;">
+              {{ self.sidebar_text|richtext }}
+
+            </div>
+          </div>
+        </div>
+        {% endif %}
+
+      </div>
   </div>
 {% endblock %}
