Make regular buttons visible again, homepage buttons still good. And nicer selects

--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -482,3 +482,9 @@ header + #content {
   }
 }
 
+
+select {
+  // make dropdowns look better.  Not all browsers support Foundation's `appearance: none`
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
