--- a/pages/static/css/_buttons.scss
+++ b/pages/static/css/_buttons.scss
@@ -1,12 +1,13 @@
 @import "./settings";
 
-a.button, .button.button {
+a.button, .button {
   box-sizing: border-box;
   border: 3px solid $white;
   background-color: transparent;
   padding: .6em 1em;
   transition: background-color .25s;
   font-size: .9em;
+  text-decoration: none;
 
   &:hover,
   &:focus {
