--- a/pages/static/css/_buttons.scss
+++ b/pages/static/css/_buttons.scss
@@ -1,6 +1,6 @@
 @import "./settings";
 
-a.button, .button {
+a.button, button.button {
   box-sizing: border-box;
   border: 3px solid $white;
   background-color: transparent;
