--- a/pages/static/css/_home_page.scss
+++ b/pages/static/css/_home_page.scss
@@ -1,6 +1,14 @@
 @import "./settings";
 
 #home-page {
+  hr {
+    height: 3px;
+    width: 50px;
+    background-color: $red-dark;
+    color: $red-dark;
+    border: 0;
+  }
+
   .orbit-wrapper {
     position: relative;
   }
@@ -43,11 +51,6 @@
     }
 
     hr {
-      height: 3px;
-      width: 50px;
-      background-color: $red-dark;
-      color: $red-dark;
-      border: 0;
       margin: 20px 0 30px;
 
       @include breakpoint(small only) {
@@ -102,6 +105,25 @@
           border-bottom-left-radius: 8px;
         }
       }
+    }
+  }
+
+  section {
+    padding: 50px;
+    text-align: center;
+    h3 {
+      color: $blue-light;
+    }
+  }
+
+  .yellow-banner {
+    text-align: center;
+    background-color: $yellow-dark;
+    padding: 50px;
+    color: $white;
+    font-size: 1.3rem;
+    h3 {
+      color: $white;
     }
   }
 }
