Homepage styling for events and news

--- a/pages/templates/pages/home_page.html
+++ b/pages/templates/pages/home_page.html
@@ -13,7 +13,7 @@
 			<div class="orbit-wrapper">
 				<ul class="orbit-container">
 					{% for block in self.content_items.all %}
-					{% image block.image width-400 as carousel_background %}
+					{% image block.image width-1280 as carousel_background %}
 					<li class="orbit-slide carousel-slide" style="background-image: url('{{carousel_background.url}}')">
 						<div class="carousel-sidebar">
 							<div class="caption">
@@ -41,15 +41,23 @@
 	</div>
 
 	<section class="events">
-		<h3>Explore our Upcoming Events</h3>
+		<h3>Explore our Events</h3>
 		<hr />
-		{% for event in events %}
-		<div>
-			{{ event.title }}
-			{{ event.date_from }}
-			{{ event.promote_panels }}
+		<div class="row">
+			{% for event in events %}
+			{% image event.feed_image width-400 as event_background %}
+			<div class="medium-12 large-4 columns">
+				<a class="event-link" href="{{event.url}}">
+					<div class="event" style="background-image: url('{{event_background.url}}')">
+						<div class="event-blue-block">
+							<h4>{{ event.title }}</h4>
+							<div class="event-date">{{ event.date_from }}</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			{% endfor %}
 		</div>
-		{% endfor %}
 
 		<a href="TODO">View All Events</a>
 	</section>
@@ -61,14 +69,22 @@
 	</div>
 
 	<section class="news">
-		<button class="button">OK WOoe</button>
 		<h3>History in the News</h3>
 		<hr />
 		{% for news_item in news %}
 		<div>
-			{{ news_item.title }}
+			<div class="news-item row">
+				<div class="news-item-image">
+					{% image news_item.feed_image width-400 %}
+				</div>
+				<div class="news-item-summary">
+					<h4>{{ news_item.title }}</h4>
+					<div class="event-date">{{ news_item.intro|richtext }}</div>
+					<a href="{{ news_item.url }}">Read more</a>
+				</div>
+			</div>
 		</div>
 		{% endfor %}
 	</section>
 
-{% endblock %}
+	{% endblock %}
