add padding, price to product cards

--- a/pages/static/css/_building-blocks.scss
+++ b/pages/static/css/_building-blocks.scss
@@ -580,6 +580,7 @@ $card-user-profile-text-color: $body-font-color;
   margin-bottom: 0;
   font-weight: 300;
   font-size: 1.5rem;
+  padding: 20px;
 }
 
 .card-user-profile-button {
