--- a/products/templates/products/product_index_page.html
+++ b/products/templates/products/product_index_page.html
@@ -19,6 +19,7 @@
                                 {% image product.image fill-500x250 %}
                                 <div class="card-user-profile-content card-section" style="padding: 0;">
                                     <p class="card-user-profile-name" style="margin-bottom: 0;">{{ product.title }}</p>
+                                    {% if product.price %}<p>Price: ${{ product.price }}</p>{% endif %}
                                 </div>
                                 <div class="card-user-profile-actions">
                                     <a href="{% pageurl product %}" class="card-user-profile-button button hollow secondary" style="border-radius: 3px;">More Info</a>
