--- a/products/templates/products/product_index_page.html
+++ b/products/templates/products/product_index_page.html
@@ -14,7 +14,7 @@
             <div class="product grid-x grid-padding-x medium-up-3" data-equalizer>
                 {% for product in products %}
                     <div class="cell">
-                        <a href="{% pageurl product %}">
+                        <a style="text-decoration:none;" href="{% pageurl product %}">
                             <div class="card-user-profile card text-center" style="border-radius: 3px;">
                                 {% image product.image fill-500x250 %}
                                 <div class="card-user-profile-content card-section" style="padding: 0;">
