made donation amount required

--- a/donation/templates/donation/donation_form.html
+++ b/donation/templates/donation/donation_form.html
@@ -87,7 +87,7 @@
                         Amount
                         <span class="required">*</span>
                     </label>
-                    <input type="text" name="donation_amount" id="id_donation_amount" maxlength="25">
+                    <input type="text" name="donation_amount" id="id_donation_amount" maxlength="25" required="">
                 </div>
             </div>
             <input class="button radius float-right" name="Send" type="submit" value="Send" style="border-radius: 5px;">
