--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -2,15 +2,11 @@
 {% load wagtailcore_tags foundation_formtags %}
 
 {% block contact_content %}
-	<div class="card" style="border-radius: 3px;">
-		<div class="card-section form-panel">
-   			<form class="contact-form" action="{% pageurl self %}" method="POST">
-     			{% csrf_token %}
-     			{{ form|as_foundation }}
-     			<input class="button radius float-right" name="Send" type="submit" value="Send" style="border-radius: 5px;">
-     			<br>
-     			<br>
-   			</form>
- 		</div>
+	<div class="form-panel">
+			<form class="contact-form" action="{% pageurl self %}" method="POST">
+				{% csrf_token %}
+				{{ form|as_foundation }}
+				<button class="button float-right" name="Send" type="submit">Send</button>
+			</form>
 	</div>
 {% endblock %}
