--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -21,7 +21,7 @@
         </div>
         <div class="top-bar-right">
             <ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
-                <li class="{% if calling_page.url == site_root %} is-active{% endif %}"><a href="{% pageurl site_root %}">Home</a></li>
+              {# <li class="{% if calling_page.url == site_root %} is-active{% endif %}"><a href="{% pageurl site_root %}">Home</a></li> #}
                 {% for menuitem in menuitems %}
                     <li class="{% if menuitem.show_dropdown %}has-submenu{% endif %} {% if calling_page.url == menuitem.url %}is-active{% endif %}">
                         <a href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
