--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -25,6 +25,7 @@
                 {% for menuitem in menuitems %}
                     <li class="{% if menuitem.show_dropdown %}has-submenu{% endif %} {% if calling_page.url == menuitem.url %}is-active{% endif %}">
                         <a href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
+                        {% comment %}
                             {% if menuitem.show_dropdown %}
                                 <ul class="submenu menu vertical" data-submenu>
                                     <li class="show-for-small-only">
@@ -33,6 +34,7 @@
                                     {% top_menu_children parent=menuitem %}
                                 </ul>
                             {% endif %}
+                        {% endcomment %}
                     </li>
                 {% endfor %}
                 <li class="snipcart-summary">
