Adds another slug helper to home page

--- a/pages/templates/pages/home_page.html
+++ b/pages/templates/pages/home_page.html
@@ -62,10 +62,9 @@
 		<a href="TODO">View All Events</a>
 	</section>
 
-
 	<div class="yellow-banner">
-		<h3>Are&nbsp;you&nbsp;a&nbsp;student? Love&nbsp;History?</h3>
-		<a class="button yellow" href="">View Membership</a>
+		<h3>Are you a student? Love History?</h3>
+		<a class="button yellow" href="{% slugurl 'membership' %}">View Membership</a>
 	</div>
 
 	<section class="news">
