Styles membership application

--- a/pages/static/css/_settings.scss
+++ b/pages/static/css/_settings.scss
@@ -76,7 +76,9 @@ $green-light: #6ac07a;
 $gray-dark: #373d4a;
 $gray-light: #727d83;
 $cream: #FFFDF3;
-
+$off-white : #F8F8FA;
+$emperor: #777777;
+$dark-metal: #222222;
 
 // 1. Global
 // ---------
