--- a/membership/templates/membership/membership_application.html
+++ b/membership/templates/membership/membership_application.html
@@ -2,8 +2,8 @@
 {% load wagtailcore_tags foundation_formtags %}
 
 {% block contact_content %}
-<div class="card" style="border-radius: 3px;">
-	<div class="card-section ">
+<div class="card">
+	<div class="card-section">
 		{{ page.intro | richtext }}
 		<form class="registration-form" action="." method="POST">
 			{% csrf_token %}
@@ -110,9 +110,11 @@
 					</select>
 				</div>
 			</div>
-			<input class="button radius float-right" name="Send" type="submit" value="Send" style="border-radius: 5px;">
-			<br>
-			<br>
+      <div class="row">
+        <div class="medium-12 columns">
+    			<button class="button float-right" type="submit">Send</button>
+        </div>
+      </div>
 		</form>
 
 	</div>
