proper <header> for board page

--- a/board/templates/board/board_page.html
+++ b/board/templates/board/board_page.html
@@ -4,9 +4,12 @@
 
 {% block body_class %}template-boardindexpage{% endblock %}
 
-{% block content %}
-    <h1>{{ page.title }}</h1>
+{% block header %}
+  {{ page.title }}
+{% endblock %}
 
+
+{% block content %}
     <div class="intro">{{ page.description|richtext }}</div>
 
     {% include_block page.body %}
