Fix searches.  Fixes #80

--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -43,6 +43,10 @@
 	      					</div>
 	      				{% endfor %}
 	    			</div>
+          {% else %}
+            <div class="text-center">
+              No results found.
+            </div>
 	    		{% endif %}
 	  		</div>
 		</div>
