--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -69,7 +69,7 @@
                   <h5>Show Your Support</h5>
                     <div class="button-row">
                         <a href="{% slugurl 'donate' %}" class="button blue">Donate</a>
-                        <a href="{% slugurl 'membership' %}" class="button blue">View Membership</a>
+                        <a href="{% slugurl 'membership' %}" class="button blue">Join</a>
                     </div>
                   <h5>Search</h5>
                   <form class="button-row" action="/search/">
