--- a/events/templates/events/event_index_page.html
+++ b/events/templates/events/event_index_page.html
@@ -1,99 +1,50 @@
 {% extends "events/event_base.html" %}
-{% load static  wagtailcore_tags wagtailimages_tags %}
-{% block cdn_css %}
-{{ block.super }}
-  <link rel="stylesheet" href="{% static 'css/fullcalendar.min.css' %}" type="text/css" />
-  <style>
-.fc-day-grid-event > .fc-content {
-    white-space: normal;
-}
-</style>
-{% endblock cdn_css %}
+{% load static wagtailcore_tags wagtailimages_tags %}
+
 {% block content %}
-	<div id="content" class="grid-container">
-		<div class="grid-x grid-padding-x align-center">
-			<div class="medium-12 cell">
-	  			<center><h3>{{ self.title }}</h3></center>
-	  		</div>
+<div id="content" class="grid-container">
+	<div id="events-index">
+		{% if request.GET.past %}
+		<a class="past-future" href="{{ request.path }}">Show Future Events</a>
+		{% else %}
+		<a class="past-future" href="{{ request.path }}?past=true">Show Past Events</a>
+		{% endif %}
 
-	  		{% include "events/includes/tags.html" %}
+		<h3>{{ self.title }}</h3>
 
-	  		<br>
-			  <div class="medium-8 cell">
+		{% include "events/includes/tags.html" %}
 
+		<div>
+			{% for event in events %}
+			{% include "events/includes/event_list_item.html" %}
+			{% endfor %}
+		</div>
 
-    		{% if events %}
-    			<div class="grid-x grid-padding-x medium-up-2" data-equalizer>
-	  				{% for event in events %}
-						{% include "events/includes/event_list_item.html" %}
-	  				{% endfor %}
-	  			</div>
-    		{% endif %}
-			</div>
-			<div class="medium-4 cell">
-					<div class="grid-x grid-padding-x  align-right">
+		{% if events.has_other_pages %}
+		<div class="hide-for-print medium-12 cell">
+			<ul class="pagination text-center" role="navigation" aria-label="Pagination">
+				{% if events.has_previous %}
+				<li class="pagination-previous">
+					<a href="?page={{ events.previous_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}"
+					 aria-label="Previous page">Previous</a>
+				</li>
+				{% else %}
+				<li class="pagination-previous disabled">Previous</li>
+				{% endif %}
 
-								<div id='calendar'></div>
+				<li class="unavailable">Page {{ events.number }} of {{ events.paginator.num_pages }}</li>
 
-						</div>
-
-			</div>
-	  		{% if events.has_other_pages %}
-	  			<div class="hide-for-print medium-12 cell">
-	    			<ul class="pagination text-center" role="navigation" aria-label="Pagination">
-	      				{% if events.has_previous %}
-	      					<li class="pagination-previous">
-	        					<a href="?page={{ events.previous_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}" aria-label="Previous page">Previous</a>
-	        				</li>
-	        			{% else %}
-	        				<li class="pagination-previous disabled">Previous</li>
-	        			{% endif %}
-
-	        			<li class="unavailable">Page {{ events.number }} of {{ events.paginator.num_pages }}</li>
-
-	        			{% if events.has_next %}
-	        				<li class="pagination-next">
-	          					<a href="?page={{ events.next_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}" aria-label="Next page">Next</a>
-	          				</li>
-	          			{% else %}
-	          				<li class="pagination-next disabled">Next</li>
-	          			{% endif %}
-	      			</ul>
-	    		</div>
-	    	{% endif %}
-	    </div>
+				{% if events.has_next %}
+				<li class="pagination-next">
+					<a href="?page={{ events.next_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}"
+					 aria-label="Next page">Next</a>
+				</li>
+				{% else %}
+				<li class="pagination-next disabled">Next</li>
+				{% endif %}
+			</ul>
+		</div>
+		{% endif %}
 	</div>
+</div>
 {% endblock %}
-
-{% block extra_js %}
-<script src="{% static 'js/moment.min.js' %}"></script>
-<script src="{% static 'js/fullcalendar.min.js' %}"></script>
-<script>
-    $(document).ready(function() {
-
-      $('#calendar').fullCalendar({
-        header: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'month',
-        },
-        eventLimit: true, // allow "more" link when too many events
-        events: [
-
-        {% for event in events %}
-          {
-            'title': "{{ event.title }}",
-            'start': "{{ event.date_from|date:'c' }}",
-            'end': "{{ event.date_to|date:'c' }}",
-            'url': "{% pageurl event %}",
-          },
-        {% endfor %}
-        ],
-
-      });
-
-    });
-
-</script>
-{{ block.super }}
-{% endblock extra_js %}
