--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -9,6 +9,7 @@
 
 @import './home_page';
 @import './contact-page';
+@import './events-index';
 @import './footer';
 
 @include foundation-global-styles;
