--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -484,3 +484,14 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
+
+
+.home-announcement {
+  background-color: $red-dark;
+  color: $white;
+  h3 {
+    color: $white;
+    padding-top: 10px;
+    margin-bottom: -15px;
+  }
+}
