--- a/pages/templates/pages/home_page.html
+++ b/pages/templates/pages/home_page.html
@@ -8,6 +8,17 @@
 {% block content %}
 
 <div id="home-page">
+  {% if self.show_announcement %}
+    <div class="grid-x grid-padding-x align-center home-announcement">
+      <div class="medium-9 cells">
+      <center>
+          <h3>{{ self.title_text|richtext }}</h3>
+          {{ self.body|richtext }}
+      </center>
+      </div>
+    </div>
+  {% endif %}
+
 	<div id="intro">
 		<div class="orbit clean-hero-slider" role="region" aria-label="Homepage Slider" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
 			<div class="orbit-wrapper">
