Add board members from CSV during basic page setup

--- a/board/templates/board/board_members.html
+++ b/board/templates/board/board_members.html
@@ -5,7 +5,9 @@
     <div class="board-member">
       <h2>{{ item.name }}</h2>
       <h5>{{ item.role }}</h5>
-      <h5>{{ item.joined_date }}</h5>
+      {% if item.joined_date %}
+        <h5>{{ item.joined_date }}</h5>
+      {% endif %}
     </div>
   {% endfor %}
 </div>
