add subtitle to override page title on all pages

--- a/contact/templates/contact/contact_base.html
+++ b/contact/templates/contact/contact_base.html
@@ -4,7 +4,7 @@
 {% block breadcrumbs %}{% endblock %}
 
 {% block header %}
-  {{ self.title }}
+{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
 {% endblock %}
 
 
