--- a/pages/templates/pages/standard_page_full.html
+++ b/pages/templates/pages/standard_page_full.html
@@ -4,11 +4,12 @@
 {% block breadcrumbs %}{% endblock %}
 
 {% block header %}
-{% if self.feed_image %}
-{% else %}
-{{ self.title }}
-{% endif %}
+	{% if self.feed_image %}
+	{% else %}
+	{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
+	{% endif %}
 {% endblock %}
+
 
 {% block content %}
 
