--- a/documents_gallery/templates/documents_gallery/documents_index_page.html
+++ b/documents_gallery/templates/documents_gallery/documents_index_page.html
@@ -7,10 +7,10 @@
 		<div class="grid-x grid-padding-x align-center">
 			<div class="medium-12 cell">
 		    	<center>
-		    		<h3>{{ self.title }}</h3>
+		    		<h3>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3>
 		      		{{ self.intro|richtext }}
 		    	</center>
-		
+
 		    	{% if pages|length %}
 		    		<div id="documents-index" class="product grid-x grid-padding-x medium-up-3" data-equalizer>
 		        		{% for page in pages %}
