--- a/documents_gallery/templates/documents_gallery/documents_page.html
+++ b/documents_gallery/templates/documents_gallery/documents_page.html
@@ -11,9 +11,9 @@
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x grid-padding-y align-center">
 			<div class="medium-12 cell">
-	    		<center><h3>{{ self.title }}</h3></center>
+	    		<center><h3>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3></center>
 	    	</div>
-						
+
 	    	<div class="medium-8 cell">
 		     	{% if documents %}
 		     		<table id="document-table">
@@ -24,7 +24,7 @@
 		         				<th>Download</th>
 		       				</tr>
 		     			</thead>
-		
+
 		     			<tbody>
 		      				{% for document in documents %}
 		      					<tr>
