--- a/pages/templates/pages/standard_page.html
+++ b/pages/templates/pages/standard_page.html
@@ -6,7 +6,7 @@
 {% block header %}
   {% if self.feed_image %}
   {% else %}
-      {{ self.title }}
+  {% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
   {% endif %}
 {% endblock %}
 
