--- a/products/templates/products/product_page.html
+++ b/products/templates/products/product_page.html
@@ -4,7 +4,7 @@
 {% block product_content %}
     <div class="medium-12 columns">
         <center>
-            <h3>{{ self.title }}</h3>
+            <h3>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3>
             <h5>{% include "products/includes/intro.html" with intro=self.intro only %}</h5>
         </center>
 
