--- a/events/templates/events/event_index_page.html
+++ b/events/templates/events/event_index_page.html
@@ -13,7 +13,7 @@
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
 			<div class="medium-12 cell">
-	  			<center><h3>{{ self.title }}</h3></center>
+	  			<center><h3>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3></center>
 	  		</div>
 
 	  		{% include "events/includes/tags.html" %}
