--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -6,7 +6,7 @@
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <title>{% block title %}{% if self.seo_title %}{{ self.seo_title }}{% else %}GRHS - {{ self.title }}{% endif %}{% endblock %}{% block title_suffix %}{% endblock %}</title>
+      <title>{% block title %}{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }} - Grand Rapids Historical Society{% endif %}{% endblock %}{% block title_suffix %}{% endblock %}</title>
       <meta name="description" content="{% if self.search_description %}{{ self.search_description }}{% endif %}">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
